1.9.5 - 2018-XX-XX

  1. Improve build configuration (`pom.xml`s) compatibility with Maven release
     plugin.

     Changes version string from `1.9.5-hadoop2` to `hadoop2-1.9.5`.

  2. Update Maven plugins versions.


1.9.4 - 2018-08-07

  1. Add `fs.gs.generation.read.consistency (default : LATEST)` property to
     determine read consistency across different generations of a GCS object.

     Three modes are supported:

     `LATEST`: this is the default behavior. The connector will ignore
     generation ID of the GCS objects and always try to read the live version.

     `BEST_EFFORT`: The connector will try to read the generation determined
     when the `GoogleCloudStorageReadChannel` is first established. However if
     that generation cannot be found anymore, connector will fall back to read
     the live version.

     `STRICT`: The connector will always try to read the generation determined
     when the `GoogleCloudStorageReadChannel` is first established, and report
     error (`FileNotFound`) when that generation cannot be found anymore.

     Note that this property will only apply to new streams opened after
     generation is determined. It won't affect read from any streams that are
     already open, pre-fetched footer, or the metadata of the object.

  2. Support parallel execution of GCS batch requests.

     Number of threads to execute batch requests configurable via property:

       fs.gs.batch.threads (default: 0)

     If `fs.gs.batch.threads` value is set to 0 then batch requests will be
     executed sequentially by caller thread.

  3. Do not fail-fast when creating `GoogleCloudStorageReadChannel` instance for
     non-existing object to avoid GCS metadata request.

  4. Add property to fail fast with `FileNotFoundException` when calling
     `GoogleCloudStorageImpl#open` method (costs additional GCS metadata
     request):

       fs.gs.inputstream.fast.fail.on.not.found.enable (default: true)
